force-app/main/default/objects/Account/fields/Active_Handlers__c.field-meta.xml
<CustomField>
    <fullName>Active_Handlers__c</fullName>
    <label>Active Handlers</label>
    <summarizedField>Firm_Team__c.Active_Case_Count__c</summarizedField>
    <summaryForeignKey>Firm_Team__c.Firm__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>