force-app/main/default/objects/Account/fields/Active_Individual_Members__c.field-meta.xml
<CustomField>
    <fullName>Active_Individual_Members__c</fullName>
    <label>Active Individual Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>