force-app/main/default/objects/Account/fields/Deactivate_Validation__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Validation</label>
    <type>Checkbox</type>
</CustomField>