force-app/main/default/objects/Account/fields/Firm_Email__c.field-meta.xml
<CustomField>
    <fullName>Firm_Email__c</fullName>
    <label>Firm Email</label>
    <type>Email</type>
</CustomField>