force-app/main/default/objects/Account/fields/Firm_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Firm_Supervisor_Email__c</fullName>
    <label>Firm Supervisor Email</label>
    <type>Email</type>
</CustomField>