force-app/main/default/objects/Account/fields/FirmID__c.field-meta.xml
<CustomField>
    <fullName>FirmID__c</fullName>
    <label>FirmID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>