force-app/main/default/objects/Account/recordTypes/Facilitator.recordType-meta.xml
<RecordType>
    <fullName>Facilitator</fullName>
    <active>false</active>
    <description>Facilitator</description>
    <label>Facilitator</label>
</RecordType>