force-app/main/default/objects/Account/recordTypes/Representative_Firm.recordType-meta.xml
<RecordType>
    <fullName>Representative_Firm</fullName>
    <active>true</active>
    <description>Representative Firm</description>
    <label>Representative Firm</label>
</RecordType>