force-app/main/default/objects/Account/recordTypes/Service_Firm.recordType-meta.xml
<RecordType>
    <fullName>Service_Firm</fullName>
    <active>true</active>
    <description>Service Firm</description>
    <label>Service Firm</label>
</RecordType>