force-app/main/default/objects/Account/validationRules/Cant_Deactive_Firm_with_Active_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Deactive_Firm_with_Active_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>Deactivate_Validation__c = true</errorConditionFormula>
    <errorMessage>You can&apos;t deactivate the firm if there are teams or service members with active Cases.</errorMessage>
</ValidationRule>