force-app/main/default/objects/Account/listViews/All_Representative_Firms.listView-meta.xml
<ListView>
    <fullName>All_Representative_Firms</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Firm_Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Representative_Firm</value>
    </filters>
    <label>All Representative Firms</label>
</ListView>