force-app/main/default/objects/Account/listViews/All_Service_Firms.listView-meta.xml
<ListView>
    <fullName>All_Service_Firms</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Firm_Email__c</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Service_Firm</value>
    </filters>
    <label>All Service Firms</label>
</ListView>